[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 548.371, 0, 0, 0, 0, 0, 548.371, 767.463, 0, 0, 0, 0, 0, 767.463, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
enemy_scene = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 75.0
margin_bottom = 75.0
rect_scale = Vector2( 6.39801, 9.59174 )
color = Color( 0.235294, 0.243137, 0.270588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyPath" type="Path2D" parent="."]
scale = Vector2( 0.875321, 0.938156 )
curve = SubResource( 1 )

[node name="SpawnLocation" type="PathFollow2D" parent="EnemyPath"]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 360 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
